--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -69,6 +69,10 @@
     <string name="events">Events</string>
     <string name="settings">Settings</string>
     <string name="search">Search</string>
+    <string name="explanation_text">Long click a character to be able to remove from your team.</string>
+    <string name="content_description_explanation_background">explanation background</string>
+    <string name="content_description_add_or_remove_item_button">add or remove item button</string>
+    <string name="fullstop">.</string>
 
     <string-array name="onboarding_titles">
         <item>@string/onboarding_title_1</item>
